<resources>
    <string name="app_name">Moviess</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="movies_reviews">movies reviews</string>
    <string name="username_or_email">username or email</string>
    <string name="password">Password</string>
    <string name="if_you_don_t_have_account">if you don\'t have account</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phone_number">Phone number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="rating">Rating:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="ayman">Ayman</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="watchlist">Watchlist</string>
    <string name="recommendation">Recommendation</string>
    <string name="movies">Movies</string>
    <string name="tv">TV</string>
    <string name="my_rate">My rate</string>
    <string name="contact_us">Contact us</string>
    <string name="username">username</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="rate_now">Rate now</string>
    <string name="your_main_destination">Your main destination</string>
    <string name="in_discussing_and_evaluating_films">in discussing and evaluating films</string>
    <string name="browse">browse</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="email">Email</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="if_you_have_an_account">If you have an account</string>
    <string name="registration">Registration</string>
    <string name="send_message">Send Message</string>
    <string name="return_to_login">Return to login</string>
    <string name="back_to_login_page">back to login page</string>
    <string name="ayman_algebaly">Ayman Algebaly</string>
    <string name="cinema_halls">Cinema halls</string>
    <string name="competitions_and_awards">Competitions and Awards</string>
    <string name="logout">Logout</string>
    <string name="write_comment">Write Comment</string>
    <string name="rate">Rate</string>
    <string name="Rate_Now">Rate Now</string>
    <string name="type">Type</string>
    <string name="_16">+16</string>
    <string name="english_lang">English Lang</string>
    <string name="_120_minutes">120 Minutes</string>
    <string name="release">Release</string>
    <string name="action_movie">Action Movie</string>
    <string name="_2_hours">2 hours</string>
    <string name="action">Action-</string>
    <string name="hallo">Hallo</string>
    <string name="how_can_we_help_you">How can we help you</string>
    <string name="message">Message</string>
    <string name="ayman_yahoo_com">ayman@yahoo.com</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="info">Info</string>
    <string name="comments">Comments</string>
    <string name="age">Age</string>
    <string name="language">Language</string>
    <string name="my_rates">My Rates</string>

</resources>
