<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homepage"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/check_box"
            android:title="@string/watchlist" />
        <item
            android:id="@+id/nav_recommendation"
            android:icon="@drawable/recomendation"
            android:title="@string/recommendation" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/film"
            android:title="@string/movies" />

            <item
                android:id="@+id/nav_tv"
                android:icon="@drawable/television"
                android:title="@string/tv" />
            <item
                android:id="@+id/nav_mayrate"
                android:icon="@drawable/rating"
                android:title="@string/my_rate" />

        <item
            android:id="@+id/cinema"
            android:icon="@drawable/cinema"
            android:title="@string/cinema_halls" />

        <item
            android:id="@+id/gift"
            android:icon="@drawable/gift"
            android:title="@string/competitions_and_awards" />

        <item android:actionLayout="@layout/menu_navigation"
            android:id="@+id/layoutt"
            android:title="">

        </item>


    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/logout"
            android:icon="@drawable/log_out"
            android:title="@string/logout" />

    </group>

    <group android:checkableBehavior="single">

        <item
            app:showAsAction="always"
            android:id="@+id/layout"
            android:title=""
            android:actionLayout="@layout/menu_navigation">
        </item>

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact_us"
            android:title="@string/contact_us" />
    </group>

</menu>
