<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_three"
    tools:context=".ui.activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_register_img">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/logo_img"
            android:background="@drawable/logo_main"
            android:layout_margin="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textStyle="bold"
            android:id="@+id/reg_txt"
            android:textColor="@color/white"
            android:layout_below="@id/logo_img"
            android:gravity="center_horizontal"
            android:textSize="24sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/rel_register_img">

        <EditText
            android:id="@+id/username_regiser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:inputType="textNoSuggestions"
            android:hint="@string/username"
            android:gravity="center"
            android:background="@drawable/login_field_design"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/first_name_edit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/login_field_design"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="2.5dp"
                android:hint="@string/first_name"
                android:gravity="center"/>

            <EditText
                android:id="@+id/last_name_edit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/login_field_design"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="2.5dp"
                android:hint="@string/last_name"
                android:gravity="center"/>
        </LinearLayout>

        <EditText
            android:id="@+id/phone_regiser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:gravity="center"
            android:background="@drawable/login_field_design"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>

        <EditText
            android:id="@+id/mail_regiser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:gravity="center"
            android:background="@drawable/login_field_design"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>

        <EditText
            android:id="@+id/pass_regiser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:gravity="center"
            android:background="@drawable/login_field_design"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/white"
            android:drawableStart="@drawable/white_circle"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:textStyle="bold"
            android:id="@+id/terms_txt"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_btn_register"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/if_you_have_an_account"
            android:textColor="@color/gray"
            android:id="@+id/if_you_reg"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_btn_register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    </RelativeLayout>

</ScrollView>