<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_three"
    tools:context=".ui.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/logo_img_login"
        android:background="@drawable/logo_main"
        android:layout_margin="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_img_login"
            android:text="@string/log_in"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:layout_below="@id/logo_img_login"
        android:orientation="vertical">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:gravity="center"
            android:background="@drawable/login_field_design"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:background="@drawable/login_field_design"
            android:inputType="textPassword"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/gray"
            android:id="@+id/forgot_password"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_btn_login"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/if_you_don_t_have_account"
            android:layout_marginTop="50dp"
            android:textColor="@color/gray"
            android:gravity="center"/>

        <TextView
            android:id="@+id/register_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/register"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

    </RelativeLayout>


</ScrollView>