<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.AboutMovieFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_marginEnd="2dp"
            android:textColor="@color/soft_moov"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2_hours"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_marginStart="2dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/english"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_16"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/release"
            android:gravity="end"
            android:layout_marginEnd="2dp"
            android:textColor="@color/soft_moov"
            android:textSize="16sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="18/10/2018"
            android:gravity="start"
            android:layout_marginStart="2dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_movie"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>