<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_two"
    tools:context=".ui.activities.MainActivity">


    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/logo_main"/>

    <TextView
        android:id="@+id/txt_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_main_destination"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/logo_main"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_two"
        android:text="@string/in_discussing_and_evaluating_films"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/txt_one"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/lin_log"
        android:layout_below="@id/txt_two"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_txt_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/login_txt_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin_log"
        android:orientation="vertical"
        android:id="@+id/lin_browse"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/browse"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/browse_txt_btn"
            android:textColor="@color/black"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arabic"
            android:id="@+id/arabic_txt"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="end"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:weightSum="6"
            android:paddingEnd="80dp"
            android:paddingStart="80dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/dot"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/dot"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/dot"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/dot"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/dot"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/dot"/>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/english_txt"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="start"/>

    </LinearLayout>
</RelativeLayout>